* 2014-10-21 - marcus.klein@open-xchange.com

 - Fix for bug 35109: Do not dispose kerberos tickets when sessions are moved over to long term session container.

* 2014-10-21 - thorben.betten@open-xchange.com

 - Fix for bug 34947: Check for a possible unrecoverable socket error when attempting to load mail settings (esp. standard folders); signal an empty value instead of throwing an error

* 2014-10-20 - tobias.friedrich@open-xchange.com

 - Fix for bug 34928: Try to lookup existing stored session if http-auth.autologin is enabled

* 2014-10-16 - thorben.betten@open-xchange.com

 - Fix for bug 34922: Properly re-initialize config-cascade's "server" configuration provider on configuration reload trigger

* 2014-10-14 - marcus.klein@open-xchange.com

 - Fix for bug 34517: Put Kerberos tickets of session parameters into distributed session storage.

* 2014-10-06 - thorben.betten@open-xchange.com

 - Fix for bug 34706: Use timeout-aware operations to distribute either change of local IP address, client identifier or hash string through
                      cluster to prevent the system from increasing number of stalled threads
 - Fix for bug 34765: Use secure value insertion through PreparedStatement

* 2014-09-29 - thorben.betten@open-xchange.com

 - Fix for bug 34668: Special handling for Windows IE 11 Browser in session management

* 2014-09-26 - thorben.betten@open-xchange.com

 - Fix for bug 34465: Fixed update for POP3 mail accounts

* 2014-09-18 - thorben.betten@open-xchange.com

 - Fix for bug 34071: Properly build up namespace section in IMAP folder tree

* 2014-09-11 - jan.bauerdick@open-xchange.com

 - Fix for bug 34281: Facebook made access to permissions more restrictive since April 30th 2014.
                      Removed these permissions, because they were unused.

* 2014-09-11 - martin.herfurth@open-xchange.com

 - Fix for bug 34361: Case insensitive check for organizer.

* 2014-09-10 - tobias.friedrich@open-xchange.com
